<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="sample_movie_button_id"/>
    <item type="id" name="sample_merch_button_id"/>
</resources>