...
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/addToCartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rmvQty">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/merch_details_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|top|left"
                android:text="@string/MERCHANDISE_UNAVAILABLE"
                android:textStyle="bold" />
        </LinearLayout>
...

    <ImageView
        android:id="@+id/merchandise_item_imageview"
        android:layout_width="162dp"
        android:layout_height="270dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/showNextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/merchandise_item_title" />

    <TextView
        android:id="@+id/merchandise_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
...
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/merchandise_item_imageview" />

    <TextView
        android:id="@+id/displayQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/addQty"
        app:layout_constraintStart_toEndOf="@+id/rmvQty"
        app:layout_constraintTop_toBottomOf="@+id/merchandise_item_imageview" />

    <Button
        android:id="@+id/addQty"
        android:layout_width="40dp"
...
        android:text="+"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/merchandise_item_imageview" />

    <Button
        android:id="@+id/view_cart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/VIEW_CART"
...
